# web_patterns

./: .gitignore  authors.html  create_db.sql  frponts.py  main_app.py  pyproject.toml  readme.txt  run.py  templator.py  user_views.py  views.py
patterns/: behavior.py  creation.py  decorators.py  unit_of_work.py
templates/: admin_base.html  admin_create_category.html  admin_create_product.html  admin_create_tree.html  admin_message_template.html  admin_sale.html  admin_start.html  authors.html  base.html  contact_us.html  index.html  message.html  message_template.html  messages.html  shop.html  simplestyle_horizon_a_page.html  simplestyle_horizon_another_page.html  simplestyle_horizon_contact_us.html  simplestyle_horizon_examples.html
test_app/: docker-compose.yml
test_app/rabbitmq/: Dockerfile
test_app/smartshop_services/step1_sales_django/: Dockerfile
test_app/smartshop_services/step1_sales_django/mainapp/: views.py
test_app/smartshop_services/step2_orders_flask/: Dockerfile  main.py  requirements.txt
test_app/smartshop_services/step3_rapair_rabbit/: main.py
test_app/step1_simple/mainapp/: models.py
test_app/step1_simple/smartshop/: settings.py
test_app/step2_orders/mainapp/: models.py
test_app/step2_orders/orderapp/: models.py
test_app/step2_orders/smartshop/: settings.py
test_app/step3_repair/repairapp/: models.py
test_app/step3_repair/smartshop/: urls.py
test_app/step4_ddd/orderapp/: models.py
test_app/step4_ddd/repairapp/: apps.py  models.py
test_app/step4_ddd/smartshop/: settings.py
(+10 files in other folders)
