[tool.poetry]
name = "web_patterns"
version = "0.1.0"
description = ""
authors = ["timonation"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uWSGI = "^2.0.21"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
