[tool.poetry]
name = "web_patterns"
version = "0.1.0"
description = ""
authors = ["timonation"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uWSGI = "^2.0.21"
Jinja2 = "^3.1.2"
jsonpickle = "^3.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
django = "^4.2.3"
flask = "^2.3.2"
pika = "^1.3.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
